@@ -1,0 +1,24 @@
+Main	SWYM 0,5
+	SWYM $0,5
+	SWYM $2,5
+	SWYM $2,0,5
+	SWYM 1,2,3
+	SWYM $1,$2,3
+	SWYM $1,$2,$3
+	SWYM 1,2,$3
+	TRAP 0,5
+	TRAP $0,5
+	TRAP $2,5
+	TRAP $2,0,5
+	TRAP 1,2,3
+	TRAP $1,$2,3
+	TRAP $1,$2,$3
+	TRAP 1,2,$3
+	TRIP $11,22,$33
+	SWYM $123
+	SWYM $123,45678
+	TRIP 1234567
+	TRAP 123,$45
+	TRAP 123,45678
+	TRIP 255*255*257
+	SWYM 99,255*256
